# elastic-surv

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: test.yml
docs/: conf.py  index.rst
src/elastic_surv/: dataset.py  optimizer.py
src/elastic_surv/models/: __init__.py  base.py  model_cox_ph.py  model_deephit.py  model_logistic_hazard.py
tests/: test_dataset.py  test_optimizer.py
tests/models/: test_cox_ph.py  test_deephit.py  test_logistic_hazard.py
tutorials/: tutorial_1_data_backends.ipynb  tutorial_2_model_training.ipynb  tutorial_3_automl.ipynb
