[metadata]
name = elastic-surv
description = Survival analysis for ES
author = Bogdan Cebere
author_email = bogdan.cebere@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = https://pyscaffold.org/

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    pandas
    sklearn
    eland
    torch
    pycox
    tqdm
    importlib-metadata


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov
    bandit
    black
    flake8
    pre-commit
    pysurvival
    matplotlib
    jupyter
    notebook
    altair
    lifelines

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.1.1
package = elastic_surv
